투두 입력시 textarea로 변경 및 수정 기능 추가

--- a/src/components/TodoListItem.scss
+++ b/src/components/TodoListItem.scss
@@ -23,6 +23,12 @@
       // 아이콘
       font-size: 1.5rem;
     }
+    input {
+      height: 30px;
+    }
+    input:focus {
+      outline: none;
+    }
     .text {
       margin-left: 0.5rem;
       flex: 1; // 차지할 수 있는 영역 모두 차지
@@ -34,7 +40,7 @@
       }
       .text {
         color: #adb5bd;
-        text-decoration: line-through;
+        // text-decoration: line-through;
       }
     }
   }
@@ -46,6 +52,17 @@
     cursor: pointer;
     &:hover {
       color: #ff8787;
+    }
+  }
+  
+  .update {
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+    color: #22b8cf;
+    cursor: pointer;
+    &:hover {
+      color: #1d9bad;
     }
   }
 
