--- a/src/components/TodoInsert.scss
+++ b/src/components/TodoInsert.scss
@@ -16,6 +16,9 @@
     // 버튼을 제외한 영역을 모두 차지하기
     flex: 1;
   }
+  textarea {
+    width: 100%;
+  }
   button {
     // 기본 스타일 초기화
     background: none;
